Function names changed

--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
    crossorigin=""></script>
 <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 <script type=module src="js/modules/mathematical.js"></script>
-<script type=module src="js/modules/form-submit-messages.js"></script>
-<script type=module src="js/modules/enable-disable-page.js"></script>
+<script type=module src="js/modules/submit-popups.js"></script>
+<script type=module src="js/modules/toggle-page.js"></script>
 <script type=module src="js/modules/generate-layout.js"></script>
 <script type=module src="js/modules/interaction-with-form.js"></script>
 <script type=module src="js/modules/server-interfaces.js"></script>
