Reset to button

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--submit">
           <button class="ad-form__submit" type="submit">Опубликовать</button>
-          или <button class="ad-form__reset" type="reset">очистить</button>
+          или <button class="ad-form__reset" type="button">очистить</button>
         </fieldset>
       </form>
     </section>
@@ -266,13 +266,6 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
 <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-<script type=module src="js/modules/mathematical.js"></script>
-<script type=module src="js/modules/submit-popups.js"></script>
-<script type=module src="js/modules/toggle-page.js"></script>
-<script type=module src="js/modules/generate-layout.js"></script>
-<script type=module src="js/modules/interaction-with-form.js"></script>
-<script type=module src="js/modules/server-interfaces.js"></script>
-<script type=module src="js/modules/map.js"></script>
 <script type=module src="js/main.js"></script>
 
 
